--- a/templates/edit.html
+++ b/templates/edit.html
@@ -105,7 +105,7 @@
       <li class="active">
         <a href="/category">
           <span class="icon"><i class="mdi mdi-square-edit-outline"></i></span>
-          <span class="menu-item-label">category</span>
+          <span class="menu-item-label">Category</span>
         </a>
       </li>
       <li>
@@ -144,42 +144,33 @@
 <section class="section main-section">
   <form action="/edit" method="POST">
     <section class="section main-section category">
-      <!-- <div class="card mb-6"> -->
-        <!-- <h1 class="label">Category name</h1> -->
-        <!-- {% for data in user %} -->
         <div class="form-group">
-          <!-- <form  class="cateogry" style="padding: 5px"> -->
-            <!-- <input type="hidden"  name="id" value="{{ data[1] }}"> -->
+            <input type="hidden"  name="id" id="id" value="{{ user[0] }}">
             <label ><h1 class="label">Category name</h1>
               <label for="category_name" class="label"></label>
               <input type="text" class="form-control" id="category_name" name="category_name" value="{{ user[1] }}">
             </label>
           </div>
-          <!-- {% endfor %} -->
-        <!-- </form><br> -->
-        <!-- <form> -->
           <br>
           <div class="form-group">
             <label for="image" class="label"><h1 class="label">Category Image</h1>
-              <input type="file" class="form-control" name="image" id="image" value="{{ user[2] }}">
+              <input type="file" class="form-control" name="image" id="image" value="{{ user[2] }}" accept="image/png, image/jpeg">
             </label>
           </div>
-        <!-- </form><br> -->
         <br>
         <div class="field grouped">
           <div class="control">
-            <button type="submit" class="button green" formaction="/edit">Submit</button>
+            <button type="submit" class="button green" >Submit</button>
           </div>
         </div>
     </section>  
       
     <section class="section main-section category">
-      <!-- <div class="card mb-6"> -->
         <h1 class="label">All Categorys</h1>
           {% for cat in all_name %}
           <label data-label="Company">
             <a href="/category/{{ cat[1] }}">
-              <input type="radio" name="get_value" id="get_value" value="{{ cat[1] }}">
+              <input type="radio" name="get_value" id="get_value" value="{{ cat[1] }}" required>
               <label >{{ cat[0] }}</label>
             </a>
           </label>
@@ -189,27 +180,20 @@
           <input class="form-check-input" type="checkbox" id="category">
           <label class="form-check-label" for="category">Category</label>
         </div> -->
-      <!-- </form> <br> -->
         <br>
-      <!-- <form  class="subcateogry"> -->
         <div class="form-group">
           <label for="sub_category" class="label"><h2>Add sub category</h2>
             <input type="text" class="form-control " name="sub_category" id="sub_category" placeholder="Enter sub category"  value="{{ user[3] }}">
           </label>
         </div>
-      <!-- </form><br> -->
         <br>
-      <!-- <form> -->
         <div class="form-group">
           <label for="sub_category_image" class="label"><h2>sub category image</h2>
-            <input type="file" class="form-control" name="sub_category_image" id="sub_category_image"  value="{{ user[4] }}">
+            <input type="file" class="form-control" name="sub_category_image" id="sub_category_image"  value="{{ user[4] }}" accept="image/png, image/jpeg">
           </label>
         </div><br>
-      <!-- </form><br> -->
         <div class="field grouped">
-        <!-- <div class="control"> -->
-          <button type="submit" class="button green" formaction="/category">Submit</button>
-          <!-- </div> -->
+          <button type="submit" class="button green" formaction="">Submit</button>
         </div>
       </section>
     </form>
