--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
       <li>
         <a href="/category">
           <span class="icon"><i class="mdi mdi-square-edit-outline"></i></span>
-          <span class="menu-item-label">category</span>
+          <span class="menu-item-label">Category</span>
         </a>
       </li>
       <li class="--set-active-forms-html">
@@ -137,7 +137,7 @@
         <div class="card-content">
           <div class="flex items-center justify-between">
             <div class="widget-label">
-              <h1>category</h1>
+              <h1>Category</h1>
               <h1>{{ row[0] }}</h1>
             </div>
           </div>
@@ -151,7 +151,7 @@
         <div class="card-content">
           <div class="flex items-center justify-between">
             <div class="widget-label">
-              <h1>post</h1>
+              <h1>Post</h1>
               <h1>{{ ro[0] }}</h1>
             </div>
           </div>
