--- a/templates/profile.html
+++ b/templates/profile.html
@@ -105,7 +105,7 @@
       <li class="--set-active-forms-html">
         <a href="/category">
           <span class="icon"><i class="mdi mdi-square-edit-outline"></i></span>
-          <span class="menu-item-label">category</span>
+          <span class="menu-item-label">Category</span>
         </a>
       </li>
       <li class="--set-active-forms-html">
