--- a/templates/category.html
+++ b/templates/category.html
@@ -33,6 +33,7 @@
   <meta property="twitter:image:src" content="https://justboil.me/images/one-tailwind/repository-preview-hi-res.png">
   <meta property="twitter:image:width" content="1920">
   <meta property="twitter:image:height" content="960">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130795909-1"></script> -->
@@ -106,7 +107,7 @@
       <li class="active">
         <a href="/category">
           <span class="icon"><i class="mdi mdi-square-edit-outline"></i></span>
-          <span class="menu-item-label">category</span>
+          <span class="menu-item-label">Category</span>
         </a>
       </li>
       <li>
@@ -143,21 +144,21 @@
   </div>
 </section>
 <section class="section main-section">
-  <form action="/category" method="POST">
+  <form action="/category" method="POST" class="upload-file">
     <section class="section main-section category">
       <!-- <div class="card mb-6"> -->
         <h1 class="label">Category name</h1>
           <div class="form-group">
           <!-- <form  class="cateogry" style="padding: 5px"> -->
-            <label for="category_name" class="form-label">Category name</label>
-            <input type="text" class="form-control" name="category_name" id="category_name" placeholder="Enter category name">
+            <!-- <label for="category_name" class="form-label"></label> -->
+            <input type="text" class="form-control" name="category_name" id="category_name" placeholder="Enter category name" pattern="[A-Za-z]{1,15}" maxlength="15">
           </div>
         <!-- </form><br> -->
         <!-- <form> -->
           <br>
           <div class="form-group">
             <label for="image" class="label"><h1>Category Image</h1></label>
-            <input type="file" class="form-control" name="image" id="image">
+            <input type="file" class="form-control" name="image" id="image" data-max-size="2048" accept="image/png, image/jpeg, image/webp">
           </div>
         <!-- </form><br> -->
         <br>
@@ -175,7 +176,7 @@
           {% for cat in all_name %}
           <label data-label="Company">
             <!-- <a href="/category/{{ cat[1] }}"> -->
-              <input type="radio" name="get_value" id="get_value"  value="{{ cat[1] }}">
+              <input type="radio" name="get_value" id="get_value"  value="{{ cat[1] }}" required>
               <label >{{ cat[0] }}</label>
             <!-- </a> -->
           </label>
@@ -207,14 +208,14 @@
       <!-- <form  class="subcateogry"> -->
         <div class="form-group">
           <label for="sub_category" class="label"><h2>Add sub category</h2></label>
-          <input type="text" class="form-control " name="sub_category" id="sub_category" placeholder="Enter sub category">
+          <input type="text" class="form-control " name="sub_category" id="sub_category" placeholder="Enter sub category" pattern="[A-Za-z]{1,15}" maxlength="15">
         </div>
         <!-- </form><br> -->
         <br>
         <!-- <form> -->
           <div class="form-group">
             <label for="sub_category_image" class="label"><h2>sub category image</h2></label>
-            <input type="file" class="form-control" name="sub_category_image" id="sub_category_image">
+            <input type="file" class="form-control" name="sub_category_image" id="sub_category_image" accept="image/png, image/jpeg">
           </div><br>
           <!-- </form><br> -->
           <div class="field grouped">
@@ -229,7 +230,28 @@
 </div>
 
 
-<!-- <script>
+<script>
+  $(function(){
+      var fileInput = $('.upload-file');
+      var maxSize = fileInput.data('max-size');
+      $('.image').submit(function(e){
+          if(fileInput.get(0).files.length){
+              var fileSize = fileInput.get(0).files[0].size; // in bytes
+              if(fileSize>maxSize){
+                  alert('file size is more then' + maxSize + ' bytes');
+                  return false;
+              }else{
+                  alert('file size is correct- '+fileSize+' bytes');
+              }
+          }else{
+              alert('choose file, please');
+              return false;
+          }
+      });
+  });
+</script>
+
+<script>
   $(document).ready(function() {
       $('#submit').click(function() {
           var insert = [];
@@ -251,7 +273,7 @@
           });
       });
   });
-</script> -->
+</script>
 
 <!-- Scripts below are for demo only -->
 <!-- <script type="text/javascript" src="js/main.min.js?v=1628755089081"></script> -->
