--- a/templates/editPost.html
+++ b/templates/editPost.html
@@ -98,7 +98,7 @@
       <li >
         <a href="/category">
           <span class="icon"><i class="mdi mdi-square-edit-outline"></i></span>
-          <span class="menu-item-label">category</span>
+          <span class="menu-item-label">Category</span>
         </a>
       </li>
       <li class="--set-active-forms-html">
@@ -146,7 +146,7 @@
             <br>
             <div class="form-group">
               <label for="post_image" class="label"><h1>Post Image</h1></label>
-              <input type="file" class="form-control" name="post_image" id="post_image"  value="{{ edit_post[2] }}">
+              <input type="file" class="form-control" name="post_image" id="post_image"  value="{{ edit_post[2] }}" accept="image/png, image/jpeg">
             </div>
             <!-- </form><br> -->
             <br>
@@ -161,7 +161,7 @@
               </div>
             </div>
           <div class="control">
-              <button type="submit" class="button green" formaction="/post">Submit</button>
+              <button type="submit" class="button green" formaction="">Submit</button>
           </div>
       </div>
     </section>
@@ -171,8 +171,8 @@
     {% for cat in all_name %}
     <label data-label="Company">
         <!-- <a href="/category/{{ cat[1] }}"> -->
-            <input type="radio" name="get_value" id="get_value" value="{{ cat[1] }}">
-            <label >{{ cat[0] }}</label>
+            <input type="checkbox" name="get_value" id="get_value" value="{{ cat[1] }}" > 
+            <label aria-required="true">{{ cat[0] }}</label>
             <!-- </a> -->
         </label>
         <br>
